lab2/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: deployment
    labels:
        service: service
spec:
    replicas: 2
    selector:
        matchLabels:
            app: app
    template:
        metadata:
            labels:
                app: app
        spec:
            containers:
                - name: app
                  image: app:0.1.0
